@@ -1,2 +1,13 @@
 # learning-apache-spark
-The code that I've written while playing around with Apache Spark
+
+The code that I've written while playing around with Apache Spark.
+
+[This](https://www.udemy.com/course/apache-spark-for-java-developers) is the course that I'm working on.
+
+## Notes
+
+To make Spark work with Java 17, you need to include the following JVM argument when you are running your Spark application:
+
+```
+--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+```
